test auf service geaendert